// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tektonTaskResolver resolverWithWorkspace 1`] = `
TektonHubTask {
  "_id": "gogit",
  "_params": Map {},
  "_results": [],
  "_scope": App {
    "node": Node {
      "_children": {},
      "_context": {},
      "_dependencies": Set {},
      "_locked": false,
      "_metadata": [],
      "_validations": [],
      "host": [Circular],
      "id": "",
      "scope": undefined,
    },
    "outdir": "dist",
    "outputFileExtension": ".k8s.yaml",
    "recordConstructMetadata": false,
    "resolvers": [
      LazyResolver {},
      ImplicitTokenResolver {},
      NumberStringUnionResolver {},
    ],
    "yamlOutputType": 1,
    Symbol(@aws-cdk/core.DependableTrait): {
      "dependencyRoots": [
        [Circular],
      ],
    },
  },
  "_steps": [],
  "_workspaces": Map {},
  "taskBuild": TaskBuilder {
    "_id": "gogit",
    "_name": "gogit",
    "_params": Map {
      "provider" => ParameterBuilder {
        "_defaultValue": "github",
        "_description": "provider name of git",
        "_logicalID": "provider",
        "_name": "provider",
        "_requiresPipelineParam": true,
        "_type": "string",
        "_value": "$(params.provider)",
      },
      "repo" => ParameterBuilder {
        "_defaultValue": "",
        "_description": "git repository name",
        "_logicalID": "repo",
        "_name": "repo",
        "_requiresPipelineParam": true,
        "_type": "string",
        "_value": "$(params.repo)",
      },
      "username" => ParameterBuilder {
        "_defaultValue": "",
        "_description": "username of git provider",
        "_logicalID": "username",
        "_name": "username",
        "_requiresPipelineParam": true,
        "_type": "string",
        "_value": "$(params.username)",
      },
      "token" => ParameterBuilder {
        "_defaultValue": "",
        "_description": "personal access token of git provider",
        "_logicalID": "token",
        "_name": "token",
        "_requiresPipelineParam": true,
        "_type": "string",
        "_value": "$(params.token)",
      },
      "pull_request_number" => ParameterBuilder {
        "_defaultValue": "",
        "_description": "pull request number",
        "_logicalID": "pull_request_number",
        "_name": "pull_request_number",
        "_requiresPipelineParam": true,
        "_type": "string",
        "_value": "$(params.pull_request_number)",
      },
      "gogit-image" => ParameterBuilder {
        "_defaultValue": "ghcr.io/linuxsuren/gogit:v0.0.1@sha256:33e06228b645dd46102c0870c11d420a213cdab84b7a0700dcb6da6ce8b530d6",
        "_description": "option of gogit image",
        "_logicalID": "gogit-image",
        "_name": "gogit-image",
        "_requiresPipelineParam": true,
        "_type": "string",
        "_value": "$(params.gogit-image)",
      },
    },
    "_results": [],
    "_scope": App {
      "node": Node {
        "_children": {},
        "_context": {},
        "_dependencies": Set {},
        "_locked": false,
        "_metadata": [],
        "_validations": [],
        "host": [Circular],
        "id": "",
        "scope": undefined,
      },
      "outdir": "dist",
      "outputFileExtension": ".k8s.yaml",
      "recordConstructMetadata": false,
      "resolvers": [
        LazyResolver {},
        ImplicitTokenResolver {},
        NumberStringUnionResolver {},
      ],
      "yamlOutputType": 1,
      Symbol(@aws-cdk/core.DependableTrait): {
        "dependencyRoots": [
          [Circular],
        ],
      },
    },
    "_steps": [
      TaskStepBuilder {
        "_args": [
          "--provider",
          "$(params.provider)",
          "--repo",
          "$(params.repo)",
          "--username",
          "$(params.username)",
          "--token",
          "$(params.token)",
          "--pr",
          "$(params.pull_request_number)",
        ],
        "_dir": undefined,
        "_image": "$(params.gogit-image)",
        "_name": "gogit",
        "_script": StaticScriptResolver {
          "_script": undefined,
        },
      },
    ],
    "_workspaces": Map {},
  },
  "url": "loaded git-cli yaml content",
}
`;

exports[`tektonTaskResolver resolverWithoutWorkspace 1`] = `
TektonHubTask {
  "_id": "gogit",
  "_params": Map {},
  "_results": [],
  "_scope": App {
    "node": Node {
      "_children": {},
      "_context": {},
      "_dependencies": Set {},
      "_locked": false,
      "_metadata": [],
      "_validations": [],
      "host": [Circular],
      "id": "",
      "scope": undefined,
    },
    "outdir": "dist",
    "outputFileExtension": ".k8s.yaml",
    "recordConstructMetadata": false,
    "resolvers": [
      LazyResolver {},
      ImplicitTokenResolver {},
      NumberStringUnionResolver {},
    ],
    "yamlOutputType": 1,
    Symbol(@aws-cdk/core.DependableTrait): {
      "dependencyRoots": [
        [Circular],
      ],
    },
  },
  "_steps": [],
  "_workspaces": Map {},
  "taskBuild": TaskBuilder {
    "_id": "gogit",
    "_name": "gogit",
    "_params": Map {
      "provider" => ParameterBuilder {
        "_defaultValue": "github",
        "_description": "provider name of git",
        "_logicalID": "provider",
        "_name": "provider",
        "_requiresPipelineParam": true,
        "_type": "string",
        "_value": "$(params.provider)",
      },
      "repo" => ParameterBuilder {
        "_defaultValue": "",
        "_description": "git repository name",
        "_logicalID": "repo",
        "_name": "repo",
        "_requiresPipelineParam": true,
        "_type": "string",
        "_value": "$(params.repo)",
      },
      "username" => ParameterBuilder {
        "_defaultValue": "",
        "_description": "username of git provider",
        "_logicalID": "username",
        "_name": "username",
        "_requiresPipelineParam": true,
        "_type": "string",
        "_value": "$(params.username)",
      },
      "token" => ParameterBuilder {
        "_defaultValue": "",
        "_description": "personal access token of git provider",
        "_logicalID": "token",
        "_name": "token",
        "_requiresPipelineParam": true,
        "_type": "string",
        "_value": "$(params.token)",
      },
      "pull_request_number" => ParameterBuilder {
        "_defaultValue": "",
        "_description": "pull request number",
        "_logicalID": "pull_request_number",
        "_name": "pull_request_number",
        "_requiresPipelineParam": true,
        "_type": "string",
        "_value": "$(params.pull_request_number)",
      },
      "gogit-image" => ParameterBuilder {
        "_defaultValue": "ghcr.io/linuxsuren/gogit:v0.0.1@sha256:33e06228b645dd46102c0870c11d420a213cdab84b7a0700dcb6da6ce8b530d6",
        "_description": "option of gogit image",
        "_logicalID": "gogit-image",
        "_name": "gogit-image",
        "_requiresPipelineParam": true,
        "_type": "string",
        "_value": "$(params.gogit-image)",
      },
    },
    "_results": [],
    "_scope": App {
      "node": Node {
        "_children": {},
        "_context": {},
        "_dependencies": Set {},
        "_locked": false,
        "_metadata": [],
        "_validations": [],
        "host": [Circular],
        "id": "",
        "scope": undefined,
      },
      "outdir": "dist",
      "outputFileExtension": ".k8s.yaml",
      "recordConstructMetadata": false,
      "resolvers": [
        LazyResolver {},
        ImplicitTokenResolver {},
        NumberStringUnionResolver {},
      ],
      "yamlOutputType": 1,
      Symbol(@aws-cdk/core.DependableTrait): {
        "dependencyRoots": [
          [Circular],
        ],
      },
    },
    "_steps": [
      TaskStepBuilder {
        "_args": [
          "--provider",
          "$(params.provider)",
          "--repo",
          "$(params.repo)",
          "--username",
          "$(params.username)",
          "--token",
          "$(params.token)",
          "--pr",
          "$(params.pull_request_number)",
        ],
        "_dir": undefined,
        "_image": "$(params.gogit-image)",
        "_name": "gogit",
        "_script": StaticScriptResolver {
          "_script": undefined,
        },
      },
    ],
    "_workspaces": Map {},
  },
  "url": "loaded gogit yaml content",
}
`;
